chatbot_기능 연결 및 ui 변경

--- a/frontend/search.html
+++ b/frontend/search.html
@@ -302,4 +302,10 @@
     performSearch(query);
   }
 </script>
+<!-- Floating Chatbot Button -->
+<a href="/chat" class="fixed bottom-6 right-6 bg-primary text-white rounded-full p-4 shadow-lg hover:bg-primary/90 transition-transform hover:scale-110 z-30">
+  <span class="material-symbols-outlined">
+    question_answer
+  </span>
+</a>
 </body></html>
