--- a/frontend/details.html
+++ b/frontend/details.html
@@ -269,5 +269,10 @@ document.querySelector('button.text-\\[\\#212121\\]').onclick = () => {
 // 페이지 로드 시 데이터 가져오기
 loadAgendaDetail();
 </script>
-
+<!-- Floating Chatbot Button -->
+<a href="/chat" class="fixed bottom-20 right-6 bg-primary text-white rounded-full p-4 shadow-lg hover:bg-primary/90 transition-transform hover:scale-110 z-30">
+  <span class="material-symbols-outlined">
+    question_answer
+  </span>
+</a>
 </body></html>
